syntax = "proto3";
package ai.floedb.metacat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.catalog.rpc";

message PartitionField {
  int32 field_id = 1;
  string name = 2;
  string transform = 3;
}

message PartitionSpecInfo {
  int32 spec_id = 1;
  string spec_name = 2;
  repeated PartitionField fields = 3;
}
